syntax = "proto2";

option java_multiple_files = true;
option java_outer_classname = "ProtoTagWrapper";

package org.openstreetmap.atlas.proto;

message ProtoTag {
    optional string tagText = 1;
}
